--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: link, local: true) do |form| %>
+<%= simple_form_for @link do |form| %>
   <% if link.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(link.errors.count, "error") %> prohibited this link from being saved:</h2>
@@ -12,16 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.input :title %>
   </div>
 
   <div class="field">
-    <%= form.label :url %>
-    <%= form.text_field :url %>
+    <%= form.input :url %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.button :submit, class:"btn btn-default" %>
   </div>
+  
 <% end %>
