--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   <body>
     <%= render "layouts/navigation" %>
     <div id="main_content" class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% flash.each do |name, msg| %>
+			  <%= content_tag(:div, msg, class: "alert alert-info") %>
+		  <% end %>
     <div id="content" class="center-block col-md-9">
       <%= yield %>
     </div>
